# polymarket-bot-python

./: .env.example  .gitignore  CLAUDE.md  Makefile  implementation-plan.md  polymarket-bot-prd.md  pyproject.toml
alerts/: alerter.py  dispatcher.py
auth/: credentials.py  relayer.py
bot/: __main__.py
config/: logging.py  settings.py
core/: orchestrator.py
core/control/: capability_enricher.py  market_ranker.py  parameter_service.py  sports_adapter.py  universe_scanner.py
core/execution/: book_state.py  execution_actor.py  liveness.py  market_stream.py  quote_engine.py  reporting.py  risk_gate.py  types.py  user_stream.py
core/ledger/: auto_redemption.py  fill_position_ledger.py  order_ledger.py  recovery_coordinator.py  reward_rebate_ledger.py
fees/: cache.py  calculator.py
inventory/: manager.py
metrics/: prometheus.py
scripts/: approve_contracts.py  health_check.py  markout_report.py  migrate.py  paper_trading_report.py  shadow_run.py  smoke_test.py
storage/: postgres_client.py  redis_client.py
storage/migrations/: 001_initial_schema.sql
strategies/: base.py  strategy_a.py  strategy_b.py  strategy_c.py
tests/: conftest.py
tests/integration/: test_fee_cache_outage.py  test_inventory_cycle.py  test_negrisk.py  test_pipeline.py  test_reconnect.py  test_redemption.py  test_relayer_failover.py  test_resync.py  test_self_cross.py
tests/unit/: test_alerts.py  test_auto_redemption.py  test_book_state.py  test_capability_enricher.py  test_credentials.py  test_execution_actor.py  test_fee_cache.py  test_fee_calculator.py  test_health_check.py  (+24 more)
