[tool.poetry]
name = "polymarket-bot"
version = "0.1.0"
description = "Production-grade automated trading bot for Polymarket"
authors = []
packages = [
    { include = "bot" },
    { include = "config" },
    { include = "core" },
    { include = "strategies" },
    { include = "fees" },
    { include = "inventory" },
    { include = "auth" },
    { include = "storage" },
    { include = "alerts" },
    { include = "metrics" },
]

[tool.poetry.dependencies]
python = "^3.11"
py-clob-client = "==0.20.0"
web3 = "==7.15.0"
websockets = "==12.0"
uvloop = "==0.19.0"
redis = "==5.0.4"
asyncpg = "==0.29.0"
prometheus-client = "==0.20.0"
cryptography = "==42.0.5"
pydantic-settings = "==2.2.1"
httpx = "==0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "==8.1.1"
pytest-asyncio = "==0.23.6"
pytest-cov = "==5.0.0"
ruff = "==0.4.1"
mypy = "==1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
